--- a/catalog-inner.html
+++ b/catalog-inner.html
@@ -38,6 +38,7 @@
                             <span>Whatsapp</span>
                         </a>
                     </div>
+                    <div class="header__burger"><span></span></div>
                 </div>
                 <div class="header__bottom">
                     <a href="index.html" class="header__logo">
